logs/mobility/build.make.068.log.stderr
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp: In function ‘void mobilityStateMachine(const ros::TimerEvent&)’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp:201:93: error: ‘null’ was not declared in this scope
                                   log_msg.data = " ("+boost::lexical_cast<std::string>(time(null))+")"
                                                                                             ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp: In function ‘void targetHandler(const ConstPtr&)’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp:327:83: error: ‘null’ was not declared in this scope
                         log_msg.data = " ("+boost::lexical_cast<std::string>(time(null))+")"
                                                                                   ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
